fix alignment/placement of session info in secondary header

--- a/web_external/stylesheets/body/panelGroups.styl
+++ b/web_external/stylesheets/body/panelGroups.styl
@@ -1,21 +1,20 @@
 #m-left-panel-group
-  float left
-  width 280px
   position absolute
+  top $headerHeight
+  bottom 0
+  width $leftColWidth
+  background-color #ececec
   z-index 999
-  margin-left 5px
-  top 0
+  overflow auto
 
 #m-main-panel-group
   height 100%
   width 100%
-  position absolute
-  top 0
 
 #m-panel-groups
-  height "calc(100% - %s)" % $headerHeight
-  width 100%
   position relative
+  width 100%
+  height 100%
 
 // @todo assumes all panelgroups are divs, and all panel views are encapsulated in a div
 #m-panel-groups > div > div
